# 1C_Task

./: CMakeLists.txt  README.md  main.cpp
src/: Application.cpp  Application.hpp  Bot.cpp  Bot.hpp  Cell.cpp  Cell.hpp  Checker.cpp  Checker.hpp  Chessboard.cpp  Chessboard.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Real_player.cpp  Real_player.hpp  Settings.hpp
src/Visualisation/: Resource_manager.hpp  Visual_object_base.hpp
src/Visualisation/sfml_drawing/: Renderer.hpp  Texture.hpp  Texture_names.hpp  colors.hpp  screen_functions.cpp  screen_functions.hpp
